--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 language: c
 
-sudo: false
-
 os: linux
 
 compiler:
   - gcc
   - clang
+
+before_install:
+  - sudo apt-get update -y -qq
+  - sudo apt-get install gcc llvm clang -y -qq
+  - gcc --version
+  - clang --version
 
 script: make
